deployment/qa.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vacayo
  labels:
    run: vacayo
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: vacayo
    spec:
      containers:
        - image: gcr.io/vacayo-qa/vacayo:latest
          name: vacayo
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: vacayo
        - image: b.gcr.io/cloudsql-docker/gce-proxy:1.09
          name: cloudsql-proxy
          command: [
            "/cloud_sql_proxy",
            "--dir=/cloudsql",
            "-instances=vacayo-qa:us-east1:vacayo=tcp:5432",
            "-credential_file=/secrets/service-account/credentials.json"
          ]
          volumeMounts:
            - name: service-account
              mountPath: /secrets/service-account
              readOnly: true
            - name: ssl-certs-2017-10-27
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: service-account
          secret:
            secretName: service-account
        - name: ssl-certs-2017-10-27
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
