deployment/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: vacayo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vacayo-static-ip
spec:
  tls:
    - secretName: ssl-certs
  backend:
    serviceName: vacayo
    servicePort: 80
